<resources>
    <string name="app_name">Расписание</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Настрйоки</string>

    <string name="title_main">Главная</string>
    <string name="title_settings">Настройки</string>
    <string name="title_main_settings">Основные параметры</string>
    <string name="title_time">Время уроков</string>
    <string name="title_subjects">Предметы</string>
    <string name="title_teachers">Учителя</string>
    <string name="title_buildings">Корпусы</string>
    <string name="title_lessons_type">Тип урока</string>
    <string name="title_display">Отображение</string>
    <string name="title_two_weeks">Показывать две недели</string>
    <string name="title_firstday">Первый день семестра</string>
    <string name="timetable">Расписание</string>


</resources>
